# Rust-vJoy-Manager

./: .gitignore  BasicUsage.md  Cargo.toml  LICENSE  README.md  build.rs
Cfg/: config.toml  test_config.toml
assets/shaders/: egui.frag  egui.frag.spv  egui.vert  egui.vert.spv
assets/shaders/original/: egui.frag  egui.vert
assets/textures/hat_switch/: hat-switchxcf.xcf
launch/: auto_debug.bat  auto_profile.bat  cleanup.bat  compile_shaders  debug  dist  dist.bat  profile  renderdoc
src/: app_data.rs  config.rs  device.rs  error.rs  hotas.rs  input.rs  input_state.rs  input_viewer.rs  main.rs  manager.rs  output.rs  previous.rs  rebind.rs  ui_data.rs
src/graphics/: color_test.rs  egui_renderer.rs  mod.rs  push_constants.rs  vertex.rs
src/graphics_backend/: color_test.rs  egui_color_test.rs  egui_renderer.rs  mod.rs  vertex.rs
src/input/: input_state.rs  input_viewer.rs  mod.rs
src/rebind/: activation_interval.rs  axis_to_axis.rs  button_to_button.rs  hat_to_hat.rs  logical_rebind.rs  merge_axes.rs  mod.rs  rebind.rs  rebind_processor.rs  rebind_viewer.rs  reroute_rebind.rs  shift_mode_mask.rs  two_buttons_to_axis.rs  virtual_axis_trim.rs  virtual_rebind.rs
